--- a/intro_python.ipynb
+++ b/intro_python.ipynb
@@ -1,1 +1,38 @@
-{"cells":[],"metadata":{},"nbformat":4,"nbformat_minor":5}
+{
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Exploración de IA con Meta AI"
+      ],
+      "metadata": {
+        "id": "ain_fTHuMiIg"
+      },
+      "id": "ain_fTHuMiIg"
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "8EvbYdbwMnwq"
+      },
+      "id": "8EvbYdbwMnwq",
+      "execution_count": null,
+      "outputs": []
+    }
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "language_info": {
+      "name": "python"
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 5
+}
